Arabica/Par.y
-- This Happy file was machine-generated by the BNF converter
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
module Arabica.Par
  ( happyError
  , myLexer
  , pProgram
  ) where

import Prelude

import qualified Arabica.Abs
import Arabica.Lex

}

%name pProgram_internal Program
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '!' { PT _ (TS _ 1) }
  '!=' { PT _ (TS _ 2) }
  '&&' { PT _ (TS _ 3) }
  '(' { PT _ (TS _ 4) }
  ')' { PT _ (TS _ 5) }
  '*' { PT _ (TS _ 6) }
  '+' { PT _ (TS _ 7) }
  '++' { PT _ (TS _ 8) }
  ',' { PT _ (TS _ 9) }
  '-' { PT _ (TS _ 10) }
  '--' { PT _ (TS _ 11) }
  '/' { PT _ (TS _ 12) }
  ';' { PT _ (TS _ 13) }
  '<' { PT _ (TS _ 14) }
  '<=' { PT _ (TS _ 15) }
  '=' { PT _ (TS _ 16) }
  '==' { PT _ (TS _ 17) }
  '>' { PT _ (TS _ 18) }
  '>=' { PT _ (TS _ 19) }
  'Array' { PT _ (TS _ 20) }
  '[' { PT _ (TS _ 21) }
  ']' { PT _ (TS _ 22) }
  'bool' { PT _ (TS _ 23) }
  'break' { PT _ (TS _ 24) }
  'continue' { PT _ (TS _ 25) }
  'do' { PT _ (TS _ 26) }
  'else' { PT _ (TS _ 27) }
  'false' { PT _ (TS _ 28) }
  'for' { PT _ (TS _ 29) }
  'if' { PT _ (TS _ 30) }
  'int' { PT _ (TS _ 31) }
  'new' { PT _ (TS _ 32) }
  'print(' { PT _ (TS _ 33) }
  'return' { PT _ (TS _ 34) }
  'string' { PT _ (TS _ 35) }
  'to' { PT _ (TS _ 36) }
  'true' { PT _ (TS _ 37) }
  'void' { PT _ (TS _ 38) }
  'while' { PT _ (TS _ 39) }
  '{' { PT _ (TS _ 40) }
  '||' { PT _ (TS _ 41) }
  '}' { PT _ (TS _ 42) }
  L_Ident  { PT _ (TV _) }
  L_integ  { PT _ (TI _) }
  L_quoted { PT _ (TL _) }

%%

Ident :: { (Arabica.Abs.BNFC'Position, Arabica.Abs.Ident) }
Ident  : L_Ident { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.Ident (tokenText $1)) }

Integer :: { (Arabica.Abs.BNFC'Position, Integer) }
Integer  : L_integ  { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), (read (tokenText $1)) :: Integer) }

String  :: { (Arabica.Abs.BNFC'Position, String) }
String   : L_quoted { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), ((\(PT _ (TL s)) -> s) $1)) }

Program :: { (Arabica.Abs.BNFC'Position, Arabica.Abs.Program) }
Program : ListTopDef { (fst $1, Arabica.Abs.Program (fst $1) (snd $1)) }

TopDef :: { (Arabica.Abs.BNFC'Position, Arabica.Abs.TopDef) }
TopDef : Type Ident '(' ListArg ')' Block { (fst $1, Arabica.Abs.FnDef (fst $1) (snd $1) (snd $2) (snd $4) (snd $6)) }

ListTopDef :: { (Arabica.Abs.BNFC'Position, [Arabica.Abs.TopDef]) }
ListTopDef : TopDef { (fst $1, (:[]) (snd $1)) }
           | TopDef ListTopDef { (fst $1, (:) (snd $1) (snd $2)) }

Arg :: { (Arabica.Abs.BNFC'Position, Arabica.Abs.Arg) }
Arg : Type Ident { (fst $1, Arabica.Abs.Arg (fst $1) (snd $1) (snd $2)) }

ListArg :: { (Arabica.Abs.BNFC'Position, [Arabica.Abs.Arg]) }
ListArg : {- empty -} { (Arabica.Abs.BNFC'NoPosition, []) }
        | Arg { (fst $1, (:[]) (snd $1)) }
        | Arg ',' ListArg { (fst $1, (:) (snd $1) (snd $3)) }

Block :: { (Arabica.Abs.BNFC'Position, Arabica.Abs.Block) }
Block : '{' ListStmt '}' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.Block (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1)) (snd $2)) }

ListStmt :: { (Arabica.Abs.BNFC'Position, [Arabica.Abs.Stmt]) }
ListStmt : {- empty -} { (Arabica.Abs.BNFC'NoPosition, []) }
         | Stmt ListStmt { (fst $1, (:) (snd $1) (snd $2)) }

Stmt :: { (Arabica.Abs.BNFC'Position, Arabica.Abs.Stmt) }
Stmt : ';' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.Empty (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1))) }
     | Block { (fst $1, Arabica.Abs.BStmt (fst $1) (snd $1)) }
     | Type ListItem ';' { (fst $1, Arabica.Abs.Decl (fst $1) (snd $1) (snd $2)) }
     | Ident '=' Expr ';' { (fst $1, Arabica.Abs.Ass (fst $1) (snd $1) (snd $3)) }
     | Ident '[' Expr6 ']' '=' Expr ';' { (fst $1, Arabica.Abs.ArrAss (fst $1) (snd $1) (snd $3) (snd $6)) }
     | Ident '++' ';' { (fst $1, Arabica.Abs.Incr (fst $1) (snd $1)) }
     | Ident '--' ';' { (fst $1, Arabica.Abs.Decr (fst $1) (snd $1)) }
     | 'return' Expr ';' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.Ret (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1)) (snd $2)) }
     | 'return' ';' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.VRet (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1))) }
     | 'if' '(' Expr ')' Stmt { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.Cond (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }
     | 'if' '(' Expr ')' Stmt 'else' Stmt { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.CondElse (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5) (snd $7)) }
     | 'while' '(' Expr ')' Stmt { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.While (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }
     | 'break' ';' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.Break (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1))) }
     | 'continue' ';' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.Continue (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1))) }
     | Expr ';' { (fst $1, Arabica.Abs.SExp (fst $1) (snd $1)) }
     | 'for' Ident '=' Expr 'to' Expr 'do' Stmt { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.ForTo (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4) (snd $6) (snd $8)) }
     | 'print(' Expr ')' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.Print (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1)) (snd $2)) }

Item :: { (Arabica.Abs.BNFC'Position, Arabica.Abs.Item) }
Item : Ident { (fst $1, Arabica.Abs.NoInit (fst $1) (snd $1)) }
     | Ident '=' Expr { (fst $1, Arabica.Abs.Init (fst $1) (snd $1) (snd $3)) }

ListItem :: { (Arabica.Abs.BNFC'Position, [Arabica.Abs.Item]) }
ListItem : Item { (fst $1, (:[]) (snd $1)) }
         | Item ',' ListItem { (fst $1, (:) (snd $1) (snd $3)) }

Type :: { (Arabica.Abs.BNFC'Position, Arabica.Abs.Type) }
Type : 'int' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.IntType (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1))) }
     | 'string' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.StrTpye (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1))) }
     | 'bool' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.BoolType (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1))) }
     | 'void' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.VoidType (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1))) }
     | '[' Type ']' '(' ListType ')' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.FunType (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $5)) }
     | 'Array' '<' Type '>' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.ArrayType (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1)) (snd $3)) }

ListType :: { (Arabica.Abs.BNFC'Position, [Arabica.Abs.Type]) }
ListType : {- empty -} { (Arabica.Abs.BNFC'NoPosition, []) }
         | Type { (fst $1, (:[]) (snd $1)) }
         | Type ',' ListType { (fst $1, (:) (snd $1) (snd $3)) }

Expr9 :: { (Arabica.Abs.BNFC'Position, Arabica.Abs.Expr) }
Expr9 : 'new' Type '[' Integer ']' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.EArray (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4)) }
      | '(' Expr ')' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), (snd $2)) }

Expr8 :: { (Arabica.Abs.BNFC'Position, Arabica.Abs.Expr) }
Expr8 : Ident '[' Expr6 ']' { (fst $1, Arabica.Abs.EArrElem (fst $1) (snd $1) (snd $3)) }
      | Expr9 { (fst $1, (snd $1)) }

Expr7 :: { (Arabica.Abs.BNFC'Position, Arabica.Abs.Expr) }
Expr7 : '[' Type ']' '(' ListArg ')' Block { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.ELambda (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $5) (snd $7)) }
      | Expr8 { (fst $1, (snd $1)) }

Expr6 :: { (Arabica.Abs.BNFC'Position, Arabica.Abs.Expr) }
Expr6 : Ident { (fst $1, Arabica.Abs.EVar (fst $1) (snd $1)) }
      | Integer { (fst $1, Arabica.Abs.ELitInt (fst $1) (snd $1)) }
      | 'true' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.ELitTrue (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1))) }
      | 'false' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.ELitFalse (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1))) }
      | Ident '(' ListExpr ')' { (fst $1, Arabica.Abs.EApp (fst $1) (snd $1) (snd $3)) }
      | String { (fst $1, Arabica.Abs.EString (fst $1) (snd $1)) }
      | Expr7 { (fst $1, (snd $1)) }

Expr5 :: { (Arabica.Abs.BNFC'Position, Arabica.Abs.Expr) }
Expr5 : '-' Expr6 { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.Neg (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1)) (snd $2)) }
      | '!' Expr6 { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.Not (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1)) (snd $2)) }
      | Expr6 { (fst $1, (snd $1)) }

Expr4 :: { (Arabica.Abs.BNFC'Position, Arabica.Abs.Expr) }
Expr4 : Expr4 MulOp Expr5 { (fst $1, Arabica.Abs.EMul (fst $1) (snd $1) (snd $2) (snd $3)) }
      | Expr5 { (fst $1, (snd $1)) }

Expr3 :: { (Arabica.Abs.BNFC'Position, Arabica.Abs.Expr) }
Expr3 : Expr3 AddOp Expr4 { (fst $1, Arabica.Abs.EAdd (fst $1) (snd $1) (snd $2) (snd $3)) }
      | Expr4 { (fst $1, (snd $1)) }

Expr2 :: { (Arabica.Abs.BNFC'Position, Arabica.Abs.Expr) }
Expr2 : Expr2 RelOp Expr3 { (fst $1, Arabica.Abs.ERel (fst $1) (snd $1) (snd $2) (snd $3)) }
      | Expr3 { (fst $1, (snd $1)) }

Expr1 :: { (Arabica.Abs.BNFC'Position, Arabica.Abs.Expr) }
Expr1 : Expr2 '&&' Expr1 { (fst $1, Arabica.Abs.EAnd (fst $1) (snd $1) (snd $3)) }
      | Expr2 { (fst $1, (snd $1)) }

Expr :: { (Arabica.Abs.BNFC'Position, Arabica.Abs.Expr) }
Expr : Expr1 '||' Expr { (fst $1, Arabica.Abs.EOr (fst $1) (snd $1) (snd $3)) }
     | Expr1 { (fst $1, (snd $1)) }

ListExpr :: { (Arabica.Abs.BNFC'Position, [Arabica.Abs.Expr]) }
ListExpr : {- empty -} { (Arabica.Abs.BNFC'NoPosition, []) }
         | Expr { (fst $1, (:[]) (snd $1)) }
         | Expr ',' ListExpr { (fst $1, (:) (snd $1) (snd $3)) }

AddOp :: { (Arabica.Abs.BNFC'Position, Arabica.Abs.AddOp) }
AddOp : '+' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.Plus (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1))) }
      | '-' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.Minus (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1))) }

MulOp :: { (Arabica.Abs.BNFC'Position, Arabica.Abs.MulOp) }
MulOp : '*' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.Times (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1))) }
      | '/' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.Div (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1))) }

RelOp :: { (Arabica.Abs.BNFC'Position, Arabica.Abs.RelOp) }
RelOp : '<' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.LTH (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1))) }
      | '<=' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.LE (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1))) }
      | '>' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.GTH (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1))) }
      | '>=' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.GE (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1))) }
      | '==' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.EQU (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1))) }
      | '!=' { (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1), Arabica.Abs.NE (uncurry Arabica.Abs.BNFC'Position (tokenLineCol $1))) }
{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

-- Entrypoints

pProgram :: [Token] -> Err Arabica.Abs.Program
pProgram = fmap snd . pProgram_internal
}
