Arabica/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Arabica/Par.y
-----------------------------------------------------------------------------

state 141 contains 1 reduce/reduce conflicts.
state 153 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> Type Ident '(' ListArg ')' Block         (5)
	ListTopDef -> TopDef                               (6)
	ListTopDef -> TopDef ListTopDef                    (7)
	Arg -> Type Ident                                  (8)
	ListArg ->                                         (9)
	ListArg -> Arg                                     (10)
	ListArg -> Arg ',' ListArg                         (11)
	Block -> '{' ListStmt '}'                          (12)
	ListStmt ->                                        (13)
	ListStmt -> Stmt ListStmt                          (14)
	Stmt -> ';'                                        (15)
	Stmt -> Block                                      (16)
	Stmt -> Type ListItem ';'                          (17)
	Stmt -> Ident '=' Expr ';'                         (18)
	Stmt -> Ident '[' Expr6 ']' '=' Expr ';'           (19)
	Stmt -> Ident '++' ';'                             (20)
	Stmt -> Ident '--' ';'                             (21)
	Stmt -> 'return' Expr ';'                          (22)
	Stmt -> 'return' ';'                               (23)
	Stmt -> 'if' '(' Expr ')' Stmt                     (24)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (25)
	Stmt -> 'while' '(' Expr ')' Stmt                  (26)
	Stmt -> 'break' ';'                                (27)
	Stmt -> 'continue' ';'                             (28)
	Stmt -> Expr ';'                                   (29)
	Stmt -> 'for' Ident '=' Expr 'to' Expr 'do' Stmt   (30)
	Stmt -> 'print(' Expr ')'                          (31)
	Item -> Ident                                      (32)
	Item -> Ident '=' Expr                             (33)
	ListItem -> Item                                   (34)
	ListItem -> Item ',' ListItem                      (35)
	Type -> 'int'                                      (36)
	Type -> 'string'                                   (37)
	Type -> 'bool'                                     (38)
	Type -> 'void'                                     (39)
	Type -> '[' Type ']' '(' ListType ')'              (40)
	Type -> 'Array' '<' Type '>'                       (41)
	ListType ->                                        (42)
	ListType -> Type                                   (43)
	ListType -> Type ',' ListType                      (44)
	Expr9 -> 'new' Type '[' Integer ']'                (45)
	Expr9 -> '(' Expr ')'                              (46)
	Expr8 -> Ident '[' Expr6 ']'                       (47)
	Expr8 -> Expr9                                     (48)
	Expr7 -> '[' Type ']' '(' ListArg ')' Block        (49)
	Expr7 -> Expr8                                     (50)
	Expr6 -> Ident                                     (51)
	Expr6 -> Integer                                   (52)
	Expr6 -> 'true'                                    (53)
	Expr6 -> 'false'                                   (54)
	Expr6 -> Ident '(' ListExpr ')'                    (55)
	Expr6 -> String                                    (56)
	Expr6 -> Expr7                                     (57)
	Expr5 -> '-' Expr6                                 (58)
	Expr5 -> '!' Expr6                                 (59)
	Expr5 -> Expr6                                     (60)
	Expr4 -> Expr4 MulOp Expr5                         (61)
	Expr4 -> Expr5                                     (62)
	Expr3 -> Expr3 AddOp Expr4                         (63)
	Expr3 -> Expr4                                     (64)
	Expr2 -> Expr2 RelOp Expr3                         (65)
	Expr2 -> Expr3                                     (66)
	Expr1 -> Expr2 '&&' Expr1                          (67)
	Expr1 -> Expr2                                     (68)
	Expr -> Expr1 '||' Expr                            (69)
	Expr -> Expr1                                      (70)
	ListExpr ->                                        (71)
	ListExpr -> Expr                                   (72)
	ListExpr -> Expr ',' ListExpr                      (73)
	AddOp -> '+'                                       (74)
	AddOp -> '-'                                       (75)
	MulOp -> '*'                                       (76)
	MulOp -> '/'                                       (77)
	RelOp -> '<'                                       (78)
	RelOp -> '<='                                      (79)
	RelOp -> '>'                                       (80)
	RelOp -> '>='                                      (81)
	RelOp -> '=='                                      (82)
	RelOp -> '!='                                      (83)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'&&'           { PT _ (TS _ 3) }
	'('            { PT _ (TS _ 4) }
	')'            { PT _ (TS _ 5) }
	'*'            { PT _ (TS _ 6) }
	'+'            { PT _ (TS _ 7) }
	'++'           { PT _ (TS _ 8) }
	','            { PT _ (TS _ 9) }
	'-'            { PT _ (TS _ 10) }
	'--'           { PT _ (TS _ 11) }
	'/'            { PT _ (TS _ 12) }
	';'            { PT _ (TS _ 13) }
	'<'            { PT _ (TS _ 14) }
	'<='           { PT _ (TS _ 15) }
	'='            { PT _ (TS _ 16) }
	'=='           { PT _ (TS _ 17) }
	'>'            { PT _ (TS _ 18) }
	'>='           { PT _ (TS _ 19) }
	'Array'        { PT _ (TS _ 20) }
	'['            { PT _ (TS _ 21) }
	']'            { PT _ (TS _ 22) }
	'bool'         { PT _ (TS _ 23) }
	'break'        { PT _ (TS _ 24) }
	'continue'     { PT _ (TS _ 25) }
	'do'           { PT _ (TS _ 26) }
	'else'         { PT _ (TS _ 27) }
	'false'        { PT _ (TS _ 28) }
	'for'          { PT _ (TS _ 29) }
	'if'           { PT _ (TS _ 30) }
	'int'          { PT _ (TS _ 31) }
	'new'          { PT _ (TS _ 32) }
	'print('       { PT _ (TS _ 33) }
	'return'       { PT _ (TS _ 34) }
	'string'       { PT _ (TS _ 35) }
	'to'           { PT _ (TS _ 36) }
	'true'         { PT _ (TS _ 37) }
	'void'         { PT _ (TS _ 38) }
	'while'        { PT _ (TS _ 39) }
	'{'            { PT _ (TS _ 40) }
	'||'           { PT _ (TS _ 41) }
	'}'            { PT _ (TS _ 42) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rule  5
	ListTopDef      rules 6, 7
	Arg             rule  8
	ListArg         rules 9, 10, 11
	Block           rule  12
	ListStmt        rules 13, 14
	Stmt            rules 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31
	Item            rules 32, 33
	ListItem        rules 34, 35
	Type            rules 36, 37, 38, 39, 40, 41
	ListType        rules 42, 43, 44
	Expr9           rules 45, 46
	Expr8           rules 47, 48
	Expr7           rules 49, 50
	Expr6           rules 51, 52, 53, 54, 55, 56, 57
	Expr5           rules 58, 59, 60
	Expr4           rules 61, 62
	Expr3           rules 63, 64
	Expr2           rules 65, 66
	Expr1           rules 67, 68
	Expr            rules 69, 70
	ListExpr        rules 71, 72, 73
	AddOp           rules 74, 75
	MulOp           rules 76, 77
	RelOp           rules 78, 79, 80, 81, 82, 83

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'Array'        shift, and enter state 7
	'['            shift, and enter state 8
	'bool'         shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12

	Program        goto state 3
	TopDef         goto state 4
	ListTopDef     goto state 5
	Type           goto state 6

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'do'           reduce using rule 1
	'to'           reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 4

	ListTopDef -> TopDef .                              (rule 6)
	ListTopDef -> TopDef . ListTopDef                   (rule 7)

	'Array'        shift, and enter state 7
	'['            shift, and enter state 8
	'bool'         shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	%eof           reduce using rule 6

	TopDef         goto state 4
	ListTopDef     goto state 16
	Type           goto state 6

State 5

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 6

	TopDef -> Type . Ident '(' ListArg ')' Block        (rule 5)

	L_Ident        shift, and enter state 2

	Ident          goto state 15

State 7

	Type -> 'Array' . '<' Type '>'                      (rule 41)

	'<'            shift, and enter state 14


State 8

	Type -> '[' . Type ']' '(' ListType ')'             (rule 40)

	'Array'        shift, and enter state 7
	'['            shift, and enter state 8
	'bool'         shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12

	Type           goto state 13

State 9

	Type -> 'bool' .                                    (rule 38)

	')'            reduce using rule 38
	','            reduce using rule 38
	'>'            reduce using rule 38
	'['            reduce using rule 38
	']'            reduce using rule 38
	L_Ident        reduce using rule 38


State 10

	Type -> 'int' .                                     (rule 36)

	')'            reduce using rule 36
	','            reduce using rule 36
	'>'            reduce using rule 36
	'['            reduce using rule 36
	']'            reduce using rule 36
	L_Ident        reduce using rule 36


State 11

	Type -> 'string' .                                  (rule 37)

	')'            reduce using rule 37
	','            reduce using rule 37
	'>'            reduce using rule 37
	'['            reduce using rule 37
	']'            reduce using rule 37
	L_Ident        reduce using rule 37


State 12

	Type -> 'void' .                                    (rule 39)

	')'            reduce using rule 39
	','            reduce using rule 39
	'>'            reduce using rule 39
	'['            reduce using rule 39
	']'            reduce using rule 39
	L_Ident        reduce using rule 39


State 13

	Type -> '[' Type . ']' '(' ListType ')'             (rule 40)

	']'            shift, and enter state 19


State 14

	Type -> 'Array' '<' . Type '>'                      (rule 41)

	'Array'        shift, and enter state 7
	'['            shift, and enter state 8
	'bool'         shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12

	Type           goto state 18

State 15

	TopDef -> Type Ident . '(' ListArg ')' Block        (rule 5)

	'('            shift, and enter state 17


State 16

	ListTopDef -> TopDef ListTopDef .                   (rule 7)

	%eof           reduce using rule 7


State 17

	TopDef -> Type Ident '(' . ListArg ')' Block        (rule 5)

	')'            reduce using rule 9
	'Array'        shift, and enter state 7
	'['            shift, and enter state 8
	'bool'         shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12

	Arg            goto state 22
	ListArg        goto state 23
	Type           goto state 24

State 18

	Type -> 'Array' '<' Type . '>'                      (rule 41)

	'>'            shift, and enter state 21


State 19

	Type -> '[' Type ']' . '(' ListType ')'             (rule 40)

	'('            shift, and enter state 20


State 20

	Type -> '[' Type ']' '(' . ListType ')'             (rule 40)

	')'            reduce using rule 42
	'Array'        shift, and enter state 7
	'['            shift, and enter state 8
	'bool'         shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12

	Type           goto state 28
	ListType       goto state 29

State 21

	Type -> 'Array' '<' Type '>' .                      (rule 41)

	')'            reduce using rule 41
	','            reduce using rule 41
	'>'            reduce using rule 41
	'['            reduce using rule 41
	']'            reduce using rule 41
	L_Ident        reduce using rule 41


State 22

	ListArg -> Arg .                                    (rule 10)
	ListArg -> Arg . ',' ListArg                        (rule 11)

	')'            reduce using rule 10
	','            shift, and enter state 27


State 23

	TopDef -> Type Ident '(' ListArg . ')' Block        (rule 5)

	')'            shift, and enter state 26


State 24

	Arg -> Type . Ident                                 (rule 8)

	L_Ident        shift, and enter state 2

	Ident          goto state 25

State 25

	Arg -> Type Ident .                                 (rule 8)

	')'            reduce using rule 8
	','            reduce using rule 8


State 26

	TopDef -> Type Ident '(' ListArg ')' . Block        (rule 5)

	'{'            shift, and enter state 34

	Block          goto state 33

State 27

	ListArg -> Arg ',' . ListArg                        (rule 11)

	')'            reduce using rule 9
	'Array'        shift, and enter state 7
	'['            shift, and enter state 8
	'bool'         shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12

	Arg            goto state 22
	ListArg        goto state 32
	Type           goto state 24

State 28

	ListType -> Type .                                  (rule 43)
	ListType -> Type . ',' ListType                     (rule 44)

	')'            reduce using rule 43
	','            shift, and enter state 31


State 29

	Type -> '[' Type ']' '(' ListType . ')'             (rule 40)

	')'            shift, and enter state 30


State 30

	Type -> '[' Type ']' '(' ListType ')' .             (rule 40)

	')'            reduce using rule 40
	','            reduce using rule 40
	'>'            reduce using rule 40
	'['            reduce using rule 40
	']'            reduce using rule 40
	L_Ident        reduce using rule 40


State 31

	ListType -> Type ',' . ListType                     (rule 44)

	')'            reduce using rule 42
	'Array'        shift, and enter state 7
	'['            shift, and enter state 8
	'bool'         shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12

	Type           goto state 28
	ListType       goto state 69

State 32

	ListArg -> Arg ',' ListArg .                        (rule 11)

	')'            reduce using rule 11


State 33

	TopDef -> Type Ident '(' ListArg ')' Block .        (rule 5)

	'Array'        reduce using rule 5
	'['            reduce using rule 5
	'bool'         reduce using rule 5
	'int'          reduce using rule 5
	'string'       reduce using rule 5
	'void'         reduce using rule 5
	%eof           reduce using rule 5


State 34

	Block -> '{' . ListStmt '}'                         (rule 12)

	'!'            shift, and enter state 52
	'('            shift, and enter state 53
	'-'            shift, and enter state 54
	';'            shift, and enter state 55
	'Array'        shift, and enter state 7
	'['            shift, and enter state 56
	'bool'         shift, and enter state 9
	'break'        shift, and enter state 57
	'continue'     shift, and enter state 58
	'false'        shift, and enter state 59
	'for'          shift, and enter state 60
	'if'           shift, and enter state 61
	'int'          shift, and enter state 10
	'new'          shift, and enter state 62
	'print('       shift, and enter state 63
	'return'       shift, and enter state 64
	'string'       shift, and enter state 11
	'true'         shift, and enter state 65
	'void'         shift, and enter state 12
	'while'        shift, and enter state 66
	'{'            shift, and enter state 34
	'}'            reduce using rule 13
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 67
	L_quoted       shift, and enter state 68
